--- a/pmm.yml
+++ b/pmm.yml
@@ -1,25 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: pmm-server
+  name: pmm
 spec:
   ports:
-    - port: 80
+  - port: 80
   selector:
     app: pmm
   type: LoadBalancer
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: data
-spec:
-  accessModes:
-  - ReadWriteOnce
-  storageClassName: default
-  resources:
-    requests:
-      storage: 80Gi
 ---
 kind: Deployment
 apiVersion: apps/v1
@@ -38,6 +26,19 @@ spec:
       labels:
         app: pmm
     spec:
+      initContainers:
+      - name: mkfolder
+        image: busybox
+        volumeMounts:
+        - mountPath: "/consul"
+          name: consul
+        - mountPath: "/grafana"
+          name: grafana
+        - mountPath: "/mysql"
+          name: mysql
+        - mountPath: "/prometheus"
+          name: prometheus
+        command: ["/bin/chmod", "-R", "777", "/consul", "/grafana", "/mysql", "/prometheus"]
       containers:
       - name: pmm
         image: percona/pmm-server
@@ -49,19 +50,72 @@ spec:
             cpu: 200m
             memory: 3Gi
         volumeMounts:
-        - mountPath: "/opt/prometheus/data"
-          name: data
-          subPath: prometheus
         - mountPath: "/opt/consul-data"
-          name: data
-          subPath: consul
+          name: consul
         - mountPath: "/var/lib/grafana"
-          name: data
-          subPath: grafana
+          name: grafana
         - mountPath: "/var/lib/mysql"
-          name: data
-          subPath: mysql
+          name: mysql
+        - mountPath: "/opt/prometheus/data"
+          name: prometheus
       volumes:
-        - name: data
-          persistentVolumeClaim:
-            claimName: data
+      - name: consul
+        persistentVolumeClaim:
+          claimName: consul
+      - name: grafana
+        persistentVolumeClaim:
+          claimName: grafana
+      - name: mysql
+        persistentVolumeClaim:
+          claimName: mysql
+      - name: prometheus
+        persistentVolumeClaim:
+          claimName: prometheus                          
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: consul
+spec:
+  accessModes:
+  - ReadWriteOnce
+  storageClassName: default
+  resources:
+    requests:
+      storage: 10Gi
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: grafana
+spec:
+  accessModes:
+  - ReadWriteOnce
+  storageClassName: default
+  resources:
+    requests:
+      storage: 10Gi
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: mysql
+spec:
+  accessModes:
+  - ReadWriteOnce
+  storageClassName: default
+  resources:
+    requests:
+      storage: 10Gi
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: prometheus
+spec:
+  accessModes:
+  - ReadWriteOnce
+  storageClassName: default
+  resources:
+    requests:
+      storage: 80Gi
